bug with font visibility has been fixed

--- a/src/pages/start-page/components/selectors/rover-selector/rover-selector.scss
+++ b/src/pages/start-page/components/selectors/rover-selector/rover-selector.scss
@@ -72,7 +72,7 @@
     border-top-color: transparent;
     width: 25px;
     height: 25px;
-    bottom: -50px;
+    bottom: -10px;
     left: 0;
     z-index: 1;
     transition: all ease-in-out 0.2s;
@@ -86,7 +86,7 @@
     border-top-color: transparent;
     width: 25px;
     height: 25px;
-    bottom: -50px;
+    bottom: -10px;
     right: 0;
     z-index: 1;
     transition: all ease-in-out 0.2s;
@@ -124,13 +124,13 @@
   }
 
   .rover-title {
-    font-size: 16px;
+    font-size: 14px;
     padding: 10px 0px 0px 0px;
     position: relative;
     z-index: 3;
 
     &__active {
-      font-size: 17px;
+      font-size: 16px;
       padding: 10px 0px 0px 0px;
       position: relative;
       z-index: 3;
@@ -138,12 +138,12 @@
     &__active::before {
       width: 13px;
       height: 13px;
-      bottom: -35px;
+      bottom: -5px;
     }
     &__active::after {
       width: 13px;
       height: 13px;
-      bottom: -35px;
+      bottom: -5px;
     }
   }
 }
